--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
     <button id="clearAlarmBtn">Clear Alarm</button>
   </div>
 
-  <script src="script.js"></script>
+  <script src="Script.js"></script>
 </body>
 </html>
